schnapsen_core/src/schnapsen/hiba.txt
   Compiling schnapsen_core v0.1.0 (file:///home/danielbecker/Programming/Rust/schnapsen/schnapsen_core)
error[E0425]: cannot find value `stock` in this scope
    --> schnapsen_core/src/schnapsen/game/tests.rs:1169:37
     |
1169 |     let second_card_to_deal = cards[stock.len() - 2];
     |                                     ^^^^^ not found in this scope

warning: unused import: `schnapsen::game_data::PublicGameData`
 --> schnapsen_core/src/schnapsen/game/server_game/mod.rs:6:5
  |
6 | use schnapsen::game_data::PublicGameData;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: #[warn(unused_imports)] on by default

warning: unused import: `super::game_data::PublicGameData`
  --> schnapsen_core/src/schnapsen/game/mod.rs:10:5
   |
10 | use super::game_data::PublicGameData;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
error: Could not compile `schnapsen_core`.

To learn more, run the command again with --verbose.
